   bandwidth on the route onto which the task is  scheduled and the amount of 
   data to transfer.
   To divide the nominal bandwidth by 2, the rate then has to be :
                     rate = bandwidth/(2*amount) 
                     
 XBT:
 * Functions xbt_dict_hash() and xbt_dict_hash_ext() are made public,
   and renamed to xbt_str_hash() and xbt_str_hash_ext().

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.7.1) stable; urgency=low

 MSG:
 * Restore the prototype of MSG_process_create_with_environment() to
   the pre-3.7 situation by removing the kill_time argument.
 * Add a MSG_process_set_kill_time() function instead.

 SURF:
 * Fix weird behaviors when dealing with parallel tasks.

 WINDOWS:
 * Simgrid is now built as a dll.
 * Simgrid-java now works on Windows.
 * Simgrid-Java is now included into Windows package.

 MacOS:
 * First pre-build package for MacOSX.

 Build System:
 * Fix compilation when using MSG_USE_DEPRECATED.
 * Fix some compilation issues on Macs and Windows.
 * Reduce the number of failing tests on exotic systems, like Debian/Hurd.
 * Environment variables CFLAGS and LDFLAGS are now honored by cmake.

 We discovered that the Lua console is broken, but we are missing the
 manpower to fix it right now. The problem existed in 3.7 too, so we
 are not blocking the release for that. Sorry if you depended on this
 feature, any help would be really welcome.

 -- Thu Jun 7 2012 Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.7) stable; urgency=low

  The "spring cleanups (before the next Big Project kicks in)" release.

  Models:
  * We can specify the SMPI latency/bandwidth factor with command line
    add --cfg=smpi/bw_factor:"threshold0:value0;...;thresholdN:valueN"
    or add --cfg=smpi/lat_factor:"threshold0:value0;...;thresholdN:valueN"
    You can also use the "config tag" from platform file by adding this line